<resources>
    <string name="app_name">Chats App</string>
    <string name="appname">CHATS APP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="done">DONE</string>
    <string name="status">Status</string>
    <string name="search_friend">Search Friend</string>
    <string name="generate_otp">GENERATE OTP</string>
    <string name="number">Number</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="enter_your_number_for_verification">Enter your number for verification</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="enter_your_otp">ENTER YOUR OTP</string>
    <string name="we_have_sent_you_an_otp_for_nverification_phone_number">We have sent you an OTP for\nverification phone number</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="user_info">User Info</string>
    <string name="editname">Edit Name</string>

</resources>