<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.EditNameActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:padding="5dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/editname"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="40dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edtFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_background"
                    android:hint="@string/first_name"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/edt_background"
                    android:hint="@string/last_name"
                    android:imeOptions="actionDone"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:text="@string/done"
            android:textColor="@color/black" />

    </RelativeLayout>
</layout>