<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userModel"
            type="com.example.chatsapp.model.UserModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:background="@color/color_Primary"
                android:orientation="vertical"
                android:weightSum="2">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgProfile"
                        imageUrl="@{userModel.image}"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center" />

                    <ImageView
                        android:id="@+id/imgPickImage"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_camera"
                        app:layout_anchor="@id/imgProfile"
                        app:layout_anchorGravity="end|center" />

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <TextView
                    android:id="@+id/tvProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:text="@{userModel.name, default = Nothing}"
                    android:textColor="@color/color_Accent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6">

                    <TextView
                        android:id="@+id/tvProfileStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:maxWidth="300dp"
                        android:text="@{userModel.status,default = Nothing}"
                        android:textColor="@color/color_Accent"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imgEditStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/tvProfileStatus"
                        android:src="@drawable/ic_edit" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardName"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/username"
                            android:textColor="@color/color_Primary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/first_name"
                                android:textColor="@color/gray"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/last_name"
                                android:textColor="@color/gray"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_next" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tvProfileFName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/first_name"
                                android:textColor="@color/color_Primary"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvProfileLName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="24dp"
                                android:layout_weight="1"
                                android:text="@string/last_name"
                                android:textColor="@color/color_Primary"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginVertical="10dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/phone_number"
                            android:textColor="@color/color_Primary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvProfileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:textColor="@color/color_Primary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/deleteCardView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/delete_account"
                        android:textColor="@color/color_Primary"
                        android:textSize="23dp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>